2008-08-02  Thanh Han The <hanthethanh@gmail.com>

	* arc/action.c (action_savepos): Handling the new "z"-key for saving
        positions.
	
	* src/action.c (action_print_pos): Handling the new "u"-key for saving
        positions.

	* src/actions.h: likewise for the prototypes
	
	* src/callbacks.c: New static globals last_psx, last_psy for the last
	cursor position
	
	* src/callbacks.c (cb_printpos): Displaying of popup dialog for entering
	command to save
	
	* src/callbacks.c (cb_doPrintPos): saving the command entered above
	
	* src/callbacks.c (cb_savepos): saving the actual position
	
	* src/callbacks.c (cb_track): Update last_ps{xy}

        * src/callbacks.h: Likewise for the prototypes.
	
	* src/gv_misc_res.dat: Add handling for Z und U key
	
	* src/main.c: Add event handlers for GV_PrintPos and GV_SavePos.
	Update gv_savepos_filename by resource GV.saveposFIlename
	
	* src/main_globals.h: Add Widget "saveposEntry". Add String
	gv_savepos_filename.
	
	* src/misc.c: Set Sensitivity of new "saveposEntry".

2008-08-01  Bernhard R. Link <brlink@debian.org>

	* src/main_resources.h: Remive global variable options
	
	* src/esource.c (resource_buildDatabase): Do not call XrmParseCommand
	to parse an empty option list. It is not needed since 
	the cvs checkin from 2004-12-06 12:52:10 GMT.

2008-08-01  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/gv-update-userconfig: Renamed to src/gv-update-userconfig.in

	* src/Makefile.am: Built src/gv-update-userconfig from
	src/gv-update-userconfig.in by appending the default resources
	
	* src/gv-update-userconfig.in: Option "-r" to remove all resources from
	~/.gv that have their default value
	
	* src/gv_misc_res.dat: The return key now scrolls through the whole
	document vertically. Unlike the space key no horizontal scrolling
	is performed.

2008-07-31  Bernhard R. Link <brlink@debian.org>

	* doc/gv-update-userconfig.1: Man-page for gv-update-userconfig
	